--- a/Views/SelectionPopup.xaml
+++ b/Views/SelectionPopup.xaml
@@ -1,89 +1,118 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <mopups:PopupPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                  xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
                   xmlns:mopups="clr-namespace:Mopups.Pages;assembly=Mopups"
                   x:Class="SnakeGame.Views.SelectionPopup"
+                  NavigationPage.HasNavigationBar="False"
+                  Shell.NavBarIsVisible="False"
                   BackgroundColor="#80000000">
 
+    <ContentPage.Behaviors>
+        <toolkit:StatusBarBehavior StatusBarColor="Transparent" 
+                                   StatusBarStyle="LightContent" />
+    </ContentPage.Behaviors>
+
     <mopups:PopupPage.Resources>
-        <Color x:Key="Surface">#1E293B</Color>
-        <Color x:Key="Primary">#10B981</Color>
-        <Color x:Key="OnSurface">#F1F5F9</Color>
-        <Color x:Key="OnSurfaceVariant">#94A3B8</Color>
+        <ResourceDictionary>
+            <!-- WhatsApp Dark Theme Colors -->
+            <Color x:Key="Primary">#00A884</Color>
+            <Color x:Key="Surface">#1F2C34</Color>
+            <Color x:Key="SurfaceHeader">#0B141A</Color>
+            <Color x:Key="Divider">#2A3942</Color>
+            <Color x:Key="TextPrimary">#E9EDEF</Color>
+            <Color x:Key="TextSecondary">#8696A0</Color>
+            <Color x:Key="IconCircle">#233138</Color>
+        </ResourceDictionary>
     </mopups:PopupPage.Resources>
 
     <Border VerticalOptions="Center"
+            HorizontalOptions="Center"
             Margin="24"
+            WidthRequest="{OnIdiom Desktop='360', Default='320'}"
+            MaximumWidthRequest="400"
             BackgroundColor="{StaticResource Surface}"
             StrokeThickness="0">
         <Border.StrokeShape>
-            <RoundRectangle CornerRadius="24" />
+            <RoundRectangle CornerRadius="16" />
         </Border.StrokeShape>
 
-        <Grid RowDefinitions="Auto,*" RowSpacing="0">
+        <Grid RowDefinitions="Auto,Auto" RowSpacing="0">
 
             <!-- Header -->
             <Grid Grid.Row="0"
-                  Padding="24,20"
+                  Padding="20,16"
                   ColumnDefinitions="*,Auto"
-                  BackgroundColor="#334155">
+                  BackgroundColor="{StaticResource SurfaceHeader}">
                 <Label Grid.Column="0"
                        x:Name="TitleLabel"
                        Text="Select Option"
-                       FontSize="20"
+                       FontSize="18"
                        FontAttributes="Bold"
-                       TextColor="{StaticResource OnSurface}"
-                       VerticalOptions="Center" />
+                       TextColor="{StaticResource TextPrimary}"
+                       VerticalOptions="Center"
+                       LineBreakMode="TailTruncation" />
 
-                <ImageButton Grid.Column="1"
-                             Clicked="OnCloseClicked"
-                             WidthRequest="32"
-                             HeightRequest="32"
-                             BackgroundColor="Transparent"
-                             VerticalOptions="Center">
-                    <ImageButton.Source>
-                        <FontImageSource FontFamily="MaterialRegular"
-                                       Glyph="&#xe5cd;"
-                                       Color="{StaticResource OnSurfaceVariant}"
-                                       Size="24" />
-                    </ImageButton.Source>
-                </ImageButton>
+                <Border Grid.Column="1"
+                        BackgroundColor="{StaticResource IconCircle}"
+                        WidthRequest="36"
+                        HeightRequest="36"
+                        StrokeThickness="0"
+                        VerticalOptions="Center">
+                    <Border.StrokeShape>
+                        <RoundRectangle CornerRadius="18" />
+                    </Border.StrokeShape>
+                    <Border.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnCloseClicked" />
+                    </Border.GestureRecognizers>
+                    <Label Text="&#xe5cd;"
+                           FontFamily="MaterialIcons"
+                           FontSize="20"
+                           TextColor="{StaticResource TextSecondary}"
+                           HorizontalOptions="Center"
+                           VerticalOptions="Center" />
+                </Border>
             </Grid>
 
             <!-- Options List -->
-            <CollectionView Grid.Row="1"
-                            x:Name="OptionsCollection"
-                            SelectionMode="Single"
-                            SelectionChanged="OnOptionSelected"
-                            MaximumHeightRequest="400">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <Border Padding="20,16"
-                                BackgroundColor="Transparent"
-                                StrokeThickness="0">
-                            <Grid ColumnDefinitions="Auto,*"
-                                  ColumnSpacing="16">
-                                <Image Grid.Column="0"
-                                       WidthRequest="24"
-                                       HeightRequest="24"
-                                       VerticalOptions="Center">
-                                    <Image.Source>
-                                        <FontImageSource FontFamily="MaterialRegular"
-                                                       Glyph="{Binding IconGlyph}"
-                                                       Color="{StaticResource Primary}"
-                                                       Size="24" />
-                                    </Image.Source>
-                                </Image>
-                                <Label Grid.Column="1"
-                                       Text="{Binding Text}"
-                                       FontSize="16"
-                                       TextColor="{StaticResource OnSurface}"
-                                       VerticalOptions="Center" />
+            <ScrollView Grid.Row="1"
+                        MaximumHeightRequest="400">
+                <CollectionView x:Name="OptionsCollection"
+                                BackgroundColor="{StaticResource Surface}"
+                                SelectionMode="Single"
+                                SelectionChanged="OnOptionSelected">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid BackgroundColor="{StaticResource Surface}">
+                                <Grid Padding="20,14"
+                                      ColumnDefinitions="Auto,*"
+                                      ColumnSpacing="16">
+                                    <Label Grid.Column="0"
+                                           Text="{Binding IconGlyph}"
+                                           FontFamily="MaterialIcons"
+                                           FontSize="24"
+                                           TextColor="{StaticResource Primary}"
+                                           VerticalOptions="Center"
+                                           HorizontalOptions="Start" />
+
+                                    <Label Grid.Column="1"
+                                           Text="{Binding Text}"
+                                           FontSize="16"
+                                           TextColor="{StaticResource TextPrimary}"
+                                           VerticalOptions="Center"
+                                           LineBreakMode="WordWrap" />
+                                </Grid>
+
+                                <!-- Divider -->
+                                <BoxView HeightRequest="1"
+                                         Color="{StaticResource Divider}"
+                                         VerticalOptions="End"
+                                         Margin="60,0,0,0" />
                             </Grid>
-                        </Border>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </ScrollView>
         </Grid>
     </Border>
 
